chore: check mapping endpoint added
