# server/api/controllers/mappings/router.ts
@@ -1,3 +1,3 @@
 import express from 'express';
 import controller from './controller';
-export default express.Router().get('/:type', controller.byType);
+export default express.Router().post('/', controller.checkMapping);
